--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,14 @@ download_list.txt
 get_upload_link.txt
 launch.json
 remove_mp4.py
+
+
+# 忽略 macOS 生成的文件
+.DS_Store
+youdub/.DS_Store
+
+# 忽略 .idea 目录（通常是 JetBrains IDE 配置文件）
+.idea/
+
+# 忽略虚拟环境目录
+myenv/
